hardcoded overflow-y prevents flickering page (sidebar)

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -9,6 +9,7 @@
 
 body{
     background: $background;
+    overflow-y:scroll;
 }
 
 .content{
